[project]
name = "legichain-sdk"
version = "0.1.0"
description = "Official Python SDK for the Legichain AML API"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
verify = ["cryptography"]   # For webhook signature verification

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legichain"]
