[project]
name            = "legichain"
version         = "0.2.0"
description     = "Official Python SDK for the Legichain AML, KYC and Travel Rule API."
requires-python = ">=3.10"
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "Legichain", email = "contact@legichain.com" }]
maintainers     = [{ name = "Legichain", email = "contact@legichain.com" }]
keywords        = [
  "aml", "kyc", "sanctions", "pep", "compliance",
  "travel-rule", "fatf", "ofac", "masak", "screening",
  "blockchain", "crypto", "wallet", "risk",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business :: Financial",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
verify = ["cryptography"]   # for HMAC webhook signature verification

[project.urls]
Homepage        = "https://legichain.com"
Documentation   = "https://legichain.com/developers"
Repository      = "https://github.com/legichain/legichain-python"
Issues          = "https://github.com/legichain/legichain-python/issues"
Changelog       = "https://github.com/legichain/legichain-python/blob/main/CHANGELOG.md"
"API Reference" = "https://panel.legichain.com/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legichain"]

[tool.hatch.build.targets.sdist]
include = ["legichain", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]
